# FluMutGUI

./: .gitignore  README.md  flumut-gui.nsi  pyproject.toml  windows_installer.nsi
.github/workflows/: create-release-and-deploy.yml
.hooks/: hook-flumut.py  hook-flumutdb.py  hook-pip.py
flumut_gui/: LauncherWindow.py  ProgressWindow.py  __init__.py
mutfinder_gui/: LauncherWindow.py  MainWindow.py  ProgressWindow.py  __init__.py  main_window.py
src/flumut_gui/: __init__.py
