[project]
name = "mutfinder_gui"
dynamic = ["version"]
dependencies = [
    "pyqt5",
    "mutfinder @ git+ssh://git@gitlab.izsvenezie.it/biv/flumut/mutfinder.git"
]

[project.scripts]
mutfinder_gui = "mutfinder_gui:launch"

[tool.setuptools.dynamic]
version = {attr = "mutfinder_gui.__version__"}